Feat(): Adding variables styles

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,5 @@
-<ul class="nav">
+<header>
+  <ul class="nav">
   <li class="nav-item">
     <a class="nav-link active" aria-current="page" href="#">Active</a>
   </li>
@@ -12,3 +13,5 @@
     <a class="nav-link disabled" aria-disabled="true">Disabled</a>
   </li>
 </ul>
+</header>
+
