Feat(): finish creating header component

--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,5 +1,6 @@
 /* Global Variables */
 
+  /*Color Variables*/
   $primary-blue: #1D6BB3;
   $primary-red: #eb1e24;
   $primary-yellow: #fcd600;
@@ -18,3 +19,4 @@
   $tertiary-gray-7-8:#f1f1f1;
   $tertiary-black: #000000;
   $tertiary-white: #ffffff;
+
