--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,17 +1,115 @@
-<header>
-  <ul class="nav">
-  <li class="nav-item">
-    <a class="nav-link active" aria-current="page" href="#">Active</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="#">Link</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="#">Link</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-  </li>
-</ul>
-</header>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="/home">
+    <img src="./../../assets/images/infotech-logo.png" alt="Broken">
+  </a>
+  <!-- Hamburguer Icon -->
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <!-- Links -->
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="/home">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/company">Company</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/products">Products</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/services">Services</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/innovation">Innovation</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/maintenance">Maintenance & support</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/search">
+          <img src="./../../assets/icons/lupa.png" alt="">
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/languages">
+          <img src="./../../assets/icons/idioma.png" alt="">
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">
+          <!-- Trigger modal -->
+          <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#formModal">Contact us</button>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/cart">
+          <img src="./../../assets/icons/carrito-de-compras.png" alt="">
+        </a>
+      </li>
+    </ul>
+  </div>
+</nav>
+<!-- Rainbow separator -->
+<div class="rainbow"></div>
+
+
+<!-- Modal & form -->
+<div class="modal fade" id="formModal" tabindex="-1" aria-labelledby="formModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="formModalLabel">The quick brown fox <br> jumps over the lazy dog</h1>
+        <p class="modal-subtitle">Please share your contact details below</p>
+      </div>
+      <div class="modal-body">
+        <!-- FORM -->
+        <form>
+          <div class="mb-3">
+            <input type="text" class="form-control" placeholder="First Name*" required>
+          </div>
+          <div class="mb-3">
+            <input type="text" class="form-control" placeholder="Last Name*" required>
+          </div>
+          <div class="mb-3">
+            <input type="email" class="form-control" placeholder="Email*" required>
+          </div>
+          <div class="mb-3">
+            <div class="input-group">
+              <div class="input-group-prepend">
+                <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">+52</button>
+              </div>
+              <input type="tel" class="form-control" placeholder="Phone Number" required>
+            </div>
+          </div>
+          <div class="mb-3">
+            <input type="text" class="form-control" placeholder="Company*" required>
+          </div>
+          <div class="mb-3">
+            <input type="text" class="form-control" placeholder="Country*" required>
+          </div>
+          <div class="mb-3">
+            <select class="form-select" aria-label="Industry">
+              <option selected>Industry</option>
+              <!-- Additional options below-->
+            </select>
+          </div>
+          <div class="mb-3">
+            <select class="form-select" aria-label="Solution of interest">
+              <option selected>Solution of interest</option>
+              <!-- Additional options below-->
+            </select>
+          </div>
+          <div class="mb-3">
+            <textarea class="form-control" placeholder="Comments" rows="3"></textarea>
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-warning">Submit</button>
+      </div>
+    </div>
+  </div>
+</div>
