Feat(): Adding the font family to the placeholder

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -121,6 +121,7 @@ nav {
     .form-control {
       &::placeholder {
         color: $primary-gray;
+        font-family: 'Noto Sans', sans-serif;
       }
     }
     .form-select {
