Feat(): Creating footer component

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,68 @@
-<p>footer works!</p>
+<footer>
+  <div class="container">
+    <div class="row">
+      <!-- First Col -->
+      <div class="col">
+        <img src="./../../assets/images/infotech-logo-white.png" alt="">
+        <p>Founded in 2005 based in Irvine, <br>
+        California, 3D Infotech is a 3D <br>
+        software solution provider for quality <br>
+        control automation and adaptive <br>
+        manufacturing applications in a wide <br>
+        variety of industry verticals. </p>
+        <p class="reserved">© 2024 3D Infotech, Inc. All Rights Reserved</p>
+      </div>
+      <!-- Second Col -->
+      <div class="col">
+        <h6>North America</h6>
+        <p>7 Hubble Irvine, CA 92618, USA</p>
+        <p>Ph. (800) 276-1372</p>
+        <hr>
+        <p class="email">usa&commat;3dinfotech.com</p>
+
+        <h6>Latin America</h6>
+        <p>Avenida Corregidora Norte, </p>
+        <p>Corregidora 1116 ,</p>
+        <p>76140 Queretaro, México</p>
+        <hr>
+        <p class="email">latam&commat;3dinfotech.com</p>
+      </div>
+      <!-- Third Col -->
+      <div class="col">
+        <h6>Europe, Middle East & Africa</h6>
+        <p>Méhész köz 5 . Gödöll ő 2100 , Hungary</p>
+        <hr>
+        <p class="email">emea&commat;3dinfotech.com</p>
+
+        <h6>Asia Pacific</h6>
+        <p>Room 105  &107 , Building D,</p>
+        <p>2888  Wuzhong Avenue,</p>
+        <p>215100  Suzhou, Jiangsu, China</p>
+        <hr>
+        <p class="email">apac&commat;3dinfotech.com</p>
+      </div>
+      <!-- Fourth Col (Newsletter subscription) -->
+      <div class="col subscription">
+        <div class="newsletter">
+          <h5>Never want to miss an update?</h5>
+          <h4>Subscribe now to our newsletter and be part of the <strong>3DI Community</strong></h4>
+        </div>
+        <div class="form">
+          <input type="email" placeholder="Write your email here">
+          <button  type="button" class="btn btn-warning">Submit</button>
+        </div>
+        <div class="social-media-title">
+          <h5>Follow us on social media!</h5>
+        </div>
+        <div class="social-media">
+          <img src="./../../assets/icons/Instagram.svg" alt="Instagram">
+          <img src="./../../assets/icons/Facebook.svg" alt="Facebook">
+          <img src="./../../assets/icons/LinkedIn.svg" alt="Linkedin">
+          <img src="./../../assets/icons/Youtube.svg" alt="Youtube">
+          <img src="./../../assets/icons/Twitter.svg" alt="Twitter">
+          <img src="./../../assets/icons/Vimeo.svg" alt="Vimeo">
+        </div>
+      </div>
+    </div>
+  </div>
+</footer>
