Feat(): Company component first part done

--- a/src/app/company-page/company-page.component.html
+++ b/src/app/company-page/company-page.component.html
@@ -1,1 +1,7 @@
-<p>company-page works!</p>
+<section>
+  <div class="company">
+    <h2>Working together with reliable best-in-class <br> partners for high quality solutions</h2>
+    <p>We are committed to delivering superior, effective solutions. That 's why we take pride in <br>
+      working together with industry-leading partners to increase your company success</p>
+  </div>
+</section>
