--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,19 +1,19 @@
 <section class="home">
-  <div class="home-image">
-    <img src="./../../assets/images/home-image.jpg" alt="Partner Ecosystem" class="img-fluid">
-    <div class="overlay"></div>
+    <div class="home-image">
+        <img src="./../../assets/images/home-image.jpg" alt="Partner Ecosystem" class="img-fluid" />
+        <div class="overlay"></div>
 
-    <div class="container">
-      <nav aria-label="breadcrumb">
-        <ol class="breadcrumb">
-          <li class="breadcrumb-item"><a href="/">Home</a></li>
-          <li class="breadcrumb-item active" aria-current="page">Company</li>
-        </ol>
-      </nav>
-      <div class="title-container">
-        <h1 class="home-title">| Partner Ecosystem</h1>
-        <img class="chat-icon" src="./../../assets/icons/Pop up chat.svg" alt="">
-      </div>
+        <div class="container">
+            <nav aria-label="breadcrumb">
+                <ol class="breadcrumb">
+                    <li class="breadcrumb-item"><a href="/">Home</a></li>
+                    <li class="breadcrumb-item active" aria-current="page">Company</li>
+                </ol>
+            </nav>
+            <div class="title-container">
+                <h1 class="home-title">| Partner Ecosystem</h1>
+                <img class="chat-icon" src="./../../assets/icons/Pop up chat.svg" alt="" />
+            </div>
+        </div>
     </div>
-  </div>
 </section>
