--- a/src/app/company-page/company-page.component.html
+++ b/src/app/company-page/company-page.component.html
@@ -1,7 +1,75 @@
 <section>
-  <div class="company">
-    <h2>Working together with reliable best-in-class <br> partners for high quality solutions</h2>
-    <p>We are committed to delivering superior, effective solutions. That 's why we take pride in <br>
-      working together with industry-leading partners to increase your company success</p>
-  </div>
+    <div class="company">
+        <h2>
+            Working together with reliable best-in-class <br />
+            partners for high quality solutions
+        </h2>
+        <p>
+            We are committed to delivering superior, effective solutions. That 's why we take pride in <br />
+            working together with industry-leading partners to increase your company success
+        </p>
+    </div>
 </section>
+<section class="tabs">
+    <div class="row">
+        <div class="col">
+            <button id="goal_1" class="goal-selection__button" [ngClass]="{ selected: selectedIndex === 0 }" (click)="showGoal(0)">Goal #1</button>
+        </div>
+        <div class="col" offset="0.1">
+            <button id="goal_2" class="goal-selection__button" [ngClass]="{ selected: selectedIndex === 1 }" (click)="showGoal(1)">Goal #2</button>
+        </div>
+        <div class="col" offset="0.1">
+            <button id="goal_3" class="goal-selection__button" [ngClass]="{ selected: selectedIndex === 2 }" (click)="showGoal(2)">Goal #3</button>
+        </div>
+    </div>
+</section>
+
+<!-- <ion-content>
+  <div class="goals-container">
+      <div *ngFor="let goal of [goals[selectedIndex]]; let isLast = last;">
+          <ion-item class="goal-item" lines="none">
+              <ion-img class="goal-image" slot="start" src="assets/feature-headquarters/SUW_goals_icon.svg"></ion-img>
+              <div class="item-text-container">
+                  <ion-label>
+                      <h3 class="item-name">{{ goal?.name }}</h3>
+                  </ion-label>
+                  <p class="item-description">{{ goal?.description }}</p>
+              </div>
+          </ion-item>
+          <div *ngFor="let learningObj of selectedGoal?.learning_objectives">
+                  <h3 class="learning-objective-title">Learning Objective</h3>
+              <ion-item class="learning-objective-item" lines="none">
+                  <div class="item-text-container">
+                      <ion-label>
+                          <h3 class="item-name">{{ learningObj.name }}</h3>
+                      </ion-label>
+                      <p class="item-description">{{ learningObj.description }}</p>
+                  </div>
+              </ion-item>
+              <div class="success-container-wrapper">
+                  <h6 class="success-condition-title">Success Conditions</h6>
+                  <div class="success-condition-container" *ngFor="let condition of learningObj.condition">
+                      <div class="success-condition-criteria">
+                          <ion-img class="condition-image" [src]="condition.image_url"></ion-img>
+                          <div class="success-condition-label-container">
+                              <p class="success-condition-criteria__text" *ngIf="condition.comparison_property === numericConditionEnum.REVENUE || condition.comparison_property === numericConditionEnum.CASH" class="success-condition-label">{{ condition.comparison_property }} {{ condition.comparison_type }} {{ condition.comparison_value | currency: 'USD':'symbol':'1.2-2' }}</p>
+                              <p class="success-condition-criteria__text" *ngIf="condition.comparison_property === numericConditionEnum.EMPLOYEES || condition.comparison_property === numericConditionEnum.PRODUCTS_COMPLETED || condition.comparison_property === numericConditionEnum.BRAND_REPUTATION || condition.comparison_property === numericConditionEnum.ORDERS_FULFILLED" class="success-condition-label">{{ condition.comparison_property }} {{ condition.comparison_type }} {{ condition.comparison_value }}</p>
+                              <p  *ngIf="condition.comparison_property === numericConditionEnum.REVENUE || condition.comparison_property === numericConditionEnum.CASH"
+                                  class="success-condition-label">
+                                  Currently =
+                                  {{ condition.conditionGetCurrentValue() | currency: 'USD':'symbol':'1.2-2' }}
+                              </p>
+                              <p *ngIf="condition.comparison_property === numericConditionEnum.EMPLOYEES || condition.comparison_property === numericConditionEnum.PRODUCTS_COMPLETED || condition.comparison_property === numericConditionEnum.BRAND_REPUTATION || condition.comparison_property === numericConditionEnum.ORDERS_FULFILLED"
+                                  class="success-condition-label">
+                                  Currently =
+                                  {{ condition.conditionGetCurrentValue() }}
+                              </p>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+          <hr *ngIf="!isLast"/>
+      </div>
+  </div>
+</ion-content> -->
