--- a/src/app/company-page/company-page.component.scss
+++ b/src/app/company-page/company-page.component.scss
@@ -2,21 +2,62 @@
 @import './../../variables.scss';
 
 .company {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  flex-direction: column;
-  margin-top: 10vh;
-  h2 {
-    color:  $primary-blue;
-    margin-bottom: 5vh;
-    font-weight: bolder;
-  }
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    flex-direction: column;
+    margin-top: 10vh;
+    h2 {
+        color: $primary-blue;
+        margin-bottom: 5vh;
+        font-weight: bolder;
+    }
 
-  p {
-    color: $primary-gray;
-    font-size: 1.2rem;
-    font-weight: lighter;
-  }
+    p {
+        color: $primary-gray;
+        font-size: 1.2rem;
+        font-weight: lighter;
+    }
+}
+
+.tabs {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    max-height: 15%;
+}
+.row {
+    width: 90%;
+    border-bottom: #bcbcbc 1px solid;
+}
+
+.col {
+    width: 100%;
+    height: 2rem;
+    display: flex;
+    justify-content: center;
+    border: #bcbcbc solid 1px;
+    padding: 0;
+    border-radius: 6px 6px 0 0;
+}
+
+.goal-selection__button {
+    background-color: transparent;
+    border: none;
+    color: var(--suw-blue);
+    width: 100%;
+    padding: 0;
+    font-weight: 600;
+    font-size: 1rem;
+}
+
+.selected {
+    background-color: var(--suw-blue);
+    border: none;
+    color: var(--white);
+    width: 100%;
+    padding: 0;
+    border-radius: 6px 6px 0 0;
 }
