--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -51,7 +51,7 @@
                 </div>
                 <div class="form">
                     <input type="email" placeholder="Write your email here" />
-                    <button type="button" class="btn btn-warning">Submit</button>
+                    <button type="button" class="btn">Submit</button>
                 </div>
                 <div class="social-media-title">
                     <h5>Follow us on social media!</h5>
