--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -125,6 +125,7 @@ nav {
     justify-content: flex-start;
 
     button {
+      background-color: $secondary-yellow;
         color: $tertiary-white;
         padding: 0.5rem 2rem;
         border-radius: 5rem;
