--- a/src/app/company-page/company-page.component.scss
+++ b/src/app/company-page/company-page.component.scss
@@ -1,7 +1,8 @@
 /* Imports */
 @import './../../variables.scss';
 
-.company {
+/* Partners introduction */
+.company, .quotes-card {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -21,43 +22,195 @@
     }
 }
 
+/* Tabs */
 .tabs {
     display: flex;
     align-items: center;
     justify-content: center;
     width: 100%;
     max-height: 15%;
+    margin-top: 15vh;
 }
 .row {
     width: 90%;
-    border-bottom: #bcbcbc 1px solid;
+    display: flex;
+    justify-content: center;
+    gap: 10px;
 }
 
 .col {
-    width: 100%;
-    height: 2rem;
-    display: flex;
-    justify-content: center;
-    border: #bcbcbc solid 1px;
-    padding: 0;
-    border-radius: 6px 6px 0 0;
+    flex: 1;
+    padding: 0 5px;
 }
 
-.goal-selection__button {
+.category-selection__button {
     background-color: transparent;
     border: none;
-    color: var(--suw-blue);
     width: 100%;
-    padding: 0;
-    font-weight: 600;
-    font-size: 1rem;
+    color: $tertiary-gray-104-7;
+    font-size: 1.3rem;
+
 }
 
 .selected {
-    background-color: var(--suw-blue);
+  border-left: none;
+  border-top: none;
+  border-right: none;
+  border-bottom: 0.1rem solid $tertiary-gray-7-8;
+  padding-bottom: 1vw;
+}
+
+hr {
+  border: none;
+  height: 0.5vh;
+  background-color: $tertiary-gray-104-7;
+  margin: 2vw 5vw;
+}
+
+/* Images */
+.partners-images {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 10px;
+  margin: 0 0 10vw 0;
+
+  div {
+    flex: 1 0 (50% - 10%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    img {
+      max-width: 50%;
+      height: auto;
+    }
+  }
+}
+
+/* Robotics Card */
+
+.robotics-card {
+  background-color: $secondary-blue-108-8; /* Azul oscuro, ajusta según el color exacto */
+  color: $tertiary-white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 1.5rem;
+  border-radius: 2vw; // Ajusta según la curvatura de la tarjeta en la imagen
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); // Añade sombra para dar profundidad
+  margin: 5vw 10vw;
+  height: 35vh;
+
+  .robotics-card-content {
+    display: flex;
+    align-items: center;
+    gap: 15vw; // Espacio entre el texto y el botón
+  }
+
+  .robotics-card-text {
+    font-size: 2rem; // Ajusta según el tamaño del texto en la imagen
+  }
+
+  .robotics-card-button {
+    background-color: $secondary-yellow;
+    color: $tertiary-white; // Color del texto del botón, ajusta según el color exacto
     border: none;
-    color: var(--white);
-    width: 100%;
-    padding: 0;
-    border-radius: 6px 6px 0 0;
+    padding: 1.8rem;
+    border-radius: 20px; // Ajusta según la curvatura del botón en la imagen
+    cursor: pointer;
+    font-weight: bold;
+
+
+    &:hover {
+      background-color: darken($secondary-yellow, 10%); // Oscurece el botón al pasar el mouse
+    }
+  }
+}
+
+/* Quotes */
+
+.quotes-card {
+  margin-bottom: 5vw;
+}
+
+.carousel-indicators {
+  gap: 1vw;
+  .indicator {
+    width: 5vw;
+    height: 0.5vh;
+    margin-bottom: -5vw;
+    background-color: $tertiary-gray-48-8;
+  }
+
+  .active {
+    background-color:$secondary-blue-110-12;
+
+  }
+}
+
+.quote-container {
+  padding: 2vw;
+  border: 1px solid $tertiary-gray-48-8; // Cambia el color según sea necesario
+  border-radius: 1vw;
+  box-shadow: 0px 5px 6px rgba(0, 0, 0, 0.3); // Ajusta la sombra según tus preferencias
+  background-color: $tertiary-gray-7-8; // O el color de fondo deseado
+  max-width: 60vw; // O el ancho que prefieras
+  margin: 2vw;
+
+  .quote-content {
+    display: flex;
+    align-items: center; // Alinea verticalmente el texto y el icono
+    text-align: left;
+    gap: 5vw; // Espacio entre el icono y el texto
+    margin: 3vw;
+
+    i {
+      color: $primary-blue;
+      width: 10vw;
+      margin-left: 2vw;
+    }
+  }
+
+  .quote-text {
+    font-style: italic;
+    color: $primary-gray; // Cambia el color de texto según sea necesario
+    margin: 0; // Ajusta el margen según sea necesario
+    font-size:1rem; // Ajusta el tamaño de la fuente según sea necesario
+  }
+
+  hr {
+    border: none;
+    height: 2px;
+    background-color: $primary-gray; // Color de la línea
+    margin: 0; // Espacio vertical antes y después de la línea
+  }
+
+  .quote-source {
+    text-align: center;
+    font-weight: bold;
+    color: $primary-gray; // Cambia el color según sea necesario
+    font-size: 1rem; // Ajusta el tamaño de la fuente según sea necesario
+    margin: 2vw;
+  }
+}
+
+/* Button to top */
+
+.scroll-to-top {
+  position: fixed; // Fija el botón sobre el contenido
+   bottom: 20px; // 20px desde la parte inferior
+  right: 20px; // 20px desde la derecha
+  padding: 1vw 1vw;
+  color: $primary-gray;
+  background-color: $tertiary-gray-7-8;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  z-index: 999; // Asegúrate de que esté sobre otros elementos
+
+
+   &:hover {
+     background-color: $tertiary-gray-104-7;
+   }
 }
