--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -89,7 +89,8 @@ footer {
             }
 
             button {
-                padding: 0.5rem 1rem;
+              background-color: $secondary-yellow;
+                padding: 0.5rem 1.2rem;
                 color: $tertiary-white;
                 border-radius: 2vw;
                 font-weight: lighter;
