--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -116,7 +116,7 @@
                 </form>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-warning">Submit</button>
+                <button type="button" class="btn">Submit</button>
             </div>
         </div>
     </div>
