--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,8 +6,8 @@
     <button
         class="navbar-toggler"
         type="button"
-        data-toggle="collapse"
-        data-target="#navbarSupportedContent"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent"
         aria-expanded="false"
         aria-label="Toggle navigation"
@@ -36,7 +36,8 @@
             <li class="nav-item">
                 <a class="nav-link" href="/maintenance">Maintenance & support</a>
             </li>
-            <li class="nav-item">
+            <div class="column-query">
+              <li class="nav-item">
                 <a class="nav-link" href="/search">
                     <img src="./../../assets/icons/lupa.png" alt="" />
                 </a>
@@ -47,7 +48,7 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">
+                <a class="nav-link">
                     <!-- Trigger modal -->
                     <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#formModal">Contact us</button>
                 </a>
@@ -57,6 +58,8 @@
                     <img src="./../../assets/icons/carrito-de-compras.png" alt="" />
                 </a>
             </li>
+            </div>
+
         </ul>
     </div>
 </nav>
